[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/brushes/VelocityMixedUpBrush128x128.png" type="Texture" id=1]
[ext_resource path="res://theme/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://theme/small_title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://theme/title_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/MainMenu/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://assets/brushes/MainMenuBackgroundBrush.png" type="Texture" id=7]
[ext_resource path="res://shaders/MultiplyThree.tres" type="Shader" id=8]
[ext_resource path="res://assets/brushes/WhiteBrush128x2.png" type="Texture" id=9]
[ext_resource path="res://assets/brushes/MainMenuBackgroundBrush4.png" type="Texture" id=10]
[ext_resource path="res://assets/brushes/MainMenuBackgroundBrush2.png" type="Texture" id=12]
[ext_resource path="res://assets/brushes/VelocityUpBrush128x2.png" type="Texture" id=13]
[ext_resource path="res://assets/brushes/VelocityMixedUpBrush128x2.png" type="Texture" id=14]
[ext_resource path="res://assets/audio/Valley-Sunrise_Looping.ogg" type="AudioStream" id=15]
[ext_resource path="res://scenes/MouseControl/MouseMotionControl.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/textures/P1020509_Standard.jpg" type="Texture" id=17]
[ext_resource path="res://scenes/FluidSimulators/MainMenuFluidSimulator.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/brushes/MainMenuBackgroundBrush3.png" type="Texture" id=19]
[ext_resource path="res://assets/textures/VerticalMask.png" type="Texture" id=20]
[ext_resource path="res://assets/textures/HorizontalMask.png" type="Texture" id=21]

[sub_resource type="Animation" id=54]
resource_name = "Intro"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/SmallTitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/CenterContainer/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.5, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( -0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/Node2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=55]
resource_name = "Outro"
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/SmallTitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/CenterContainer/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/Node2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=56]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Node2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Intro"
length = 3.0

[sub_resource type="Animation" id=58]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/BackBufferCopyLeft/Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 40, 80, 512 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/BackBufferCopyLeft/Sprite:material:shader_param/region_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/BackBufferCopyLeft/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/BackBufferCopyRight/Sprite:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 560, 40, 80, 512 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D/BackBufferCopyRight/Sprite:material:shader_param/region_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 560, 40 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/BackBufferCopyRight/Sprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=33]
resource_name = "Rotation"
length = 30.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/BackBufferCopyLeft/Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 40, 80, 512 ), Rect2( 240, 40, 80, 512 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/BackBufferCopyLeft/Sprite:material:shader_param/region_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 40 ), Vector2( 240, 40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/BackBufferCopyLeft/Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 28, 30 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/BackBufferCopyRight/Sprite:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 560, 40, 80, 512 ), Rect2( 320, 40, 80, 512 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D/BackBufferCopyRight/Sprite:material:shader_param/region_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 560, 40 ), Vector2( 320, 40 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/BackBufferCopyRight/Sprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2, 28, 30 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=39]
resource_name = "AlternateBrushes"
length = 40.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("FluidSimulator/DyeViewport/Sprite:material:shader_param/brushTexture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10, 20, 30, 39 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 10 ), ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FluidSimulator/VelocityViewport/Sprite:material:shader_param/brushTexture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10, 20, 30, 39 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 13 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 10, 20, 30, 39 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_steeping_tea"
}, {
"args": [ true ],
"method": "set_steeping_tea"
}, {
"args": [ true ],
"method": "set_steeping_tea"
}, {
"args": [ true ],
"method": "set_steeping_tea"
}, {
"args": [ false ],
"method": "set_steeping_tea"
} ]
}

[sub_resource type="Animation" id=40]
resource_name = "FullScreenBrushOff"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FluidSimulator/VelocityViewport/Sprite:material:shader_param/brushTexture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FluidSimulator/VelocityViewport/Sprite:material:shader_param/brushScale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.004 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ Vector2( 0.5, 0.5 ) ],
"method": "set_velocity_brush_position"
}, {
"args": [ Vector2( 0.5, 0 ) ],
"method": "set_velocity_brush_position"
} ]
}

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 8 )
shader_param/region_offset = Vector2( 0, 40 )
shader_param/region_scale = Vector2( 1, 4 )
shader_param/flip_mask_h = false
shader_param/flip_mask_v = true
shader_param/mask_sampler = ExtResource( 20 )

[sub_resource type="ViewportTexture" id=14]
viewport_path = NodePath("FluidSimulator/DyeViewport")

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 8 )
shader_param/region_offset = Vector2( 0, 200 )
shader_param/region_scale = Vector2( 1, 4 )
shader_param/flip_mask_h = false
shader_param/flip_mask_v = false
shader_param/mask_sampler = ExtResource( 20 )

[sub_resource type="ViewportTexture" id=15]
viewport_path = NodePath("FluidSimulator/DyeViewport")

[sub_resource type="ShaderMaterial" id=17]
shader = ExtResource( 8 )
shader_param/region_offset = Vector2( 0, 40 )
shader_param/region_scale = Vector2( 8, 2 )
shader_param/flip_mask_h = true
shader_param/flip_mask_v = false
shader_param/mask_sampler = ExtResource( 21 )

[sub_resource type="ShaderMaterial" id=57]
shader = ExtResource( 8 )
shader_param/region_offset = Vector2( 560, 40 )
shader_param/region_scale = Vector2( 8, 2 )
shader_param/flip_mask_h = false
shader_param/flip_mask_v = false
shader_param/mask_sampler = ExtResource( 21 )

[node name="MainMenu" type="Node"]
script = ExtResource( 5 )
__meta__ = {
"_edit_vertical_guides_": [ 320.0 ]
}

[node name="FluidSimulator" parent="." instance=ExtResource( 18 )]

[node name="MenuAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = SubResource( 54 )
anims/Outro = SubResource( 55 )
anims/RESET = SubResource( 56 )

[node name="PanningTeaAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Control")
autoplay = "Intro"
anims/Intro = SubResource( 19 )
anims/RESET = SubResource( 58 )
anims/Rotation = SubResource( 33 )
next/Intro = "Rotation"

[node name="BrushAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "FullScreenBrushOff"
anims/AlternateBrushes = SubResource( 39 )
anims/FullScreenBrushOff = SubResource( 40 )
next/FullScreenBrushOff = "AlternateBrushes"

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="BackgroundPanel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
modulate = Color( 1, 1, 1, 0.45098 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 17 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D" type="Node2D" parent="Control"]
modulate = Color( 1, 1, 1, 0 )

[node name="Sprite" type="Sprite" parent="Control/Node2D"]
material = SubResource( 16 )
texture = SubResource( 14 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 40, 640, 160 )

[node name="Sprite2" type="Sprite" parent="Control/Node2D"]
material = SubResource( 13 )
position = Vector2( 0, 864 )
texture = SubResource( 15 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 200, 640, 160 )

[node name="BackBufferCopyLeft" type="BackBufferCopy" parent="Control/Node2D"]
rect = Rect2( 0, 0, 160, 1024 )

[node name="Sprite" type="Sprite" parent="Control/Node2D/BackBufferCopyLeft"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 17 )
scale = Vector2( 2, 2 )
texture = SubResource( 14 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 40, 80, 512 )

[node name="BackBufferCopyRight" type="BackBufferCopy" parent="Control/Node2D"]
rect = Rect2( 480, 0, 160, 1024 )

[node name="Sprite" type="Sprite" parent="Control/Node2D/BackBufferCopyRight"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 57 )
position = Vector2( 480, 0 )
scale = Vector2( 2, 2 )
texture = SubResource( 14 )
centered = false
region_enabled = true
region_rect = Rect2( 560, 40, 80, 512 )

[node name="Title" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_top = 160.0
margin_right = 185.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 4 )
text = "Tea Time"

[node name="SmallTitle" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_top = 248.0
margin_right = 192.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 3 )
text = "Short on time"
align = 1

[node name="TopMouseMotionControl" parent="Control" instance=ExtResource( 16 )]
margin_bottom = -864.0
minimum_vector = 1.5

[node name="BottomMouseMotionControl" parent="Control" instance=ExtResource( 16 )]
anchor_top = 1.0
margin_top = -160.0
minimum_vector = 1.5

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 222.0
margin_top = 460.0
margin_right = 418.0
margin_bottom = 564.0
rect_min_size = Vector2( 196, 0 )
custom_constants/separation = 24

[node name="StartButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 196.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Join Tea Party"

[node name="QuitButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 196.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 40 )
text = "Leave"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "Music"

[connection signal="force_applied" from="Control/TopMouseMotionControl" to="." method="_on_TopMouseMotionControl_force_applied"]
[connection signal="force_released" from="Control/TopMouseMotionControl" to="." method="_on_MouseMotionControl_force_released"]
[connection signal="force_applied" from="Control/BottomMouseMotionControl" to="." method="_on_BottomMouseMotionControl_force_applied"]
[connection signal="force_released" from="Control/BottomMouseMotionControl" to="." method="_on_MouseMotionControl_force_released"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
